--- a/www/elements/homecon-menu/homecon-menu.html
+++ b/www/elements/homecon-menu/homecon-menu.html
@@ -2,26 +2,18 @@
 <link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html">
 
-
-
-
 <link rel="import" href="../../elements/homecon-menu-section/homecon-menu-section.html">
 <link rel="import" href="../../elements/homecon-menu-item/homecon-menu-item.html">
 
+<link rel="import" href="../../styles/homecon-styles.html">
+
 <dom-module is="homecon-menu">
 	<template>
+		<style include="homecon-styles"></style>
 		<style>
 			paper-button{
 				width: 90%;
 				margin: 8px;
-
-    			background-color: #333333;
-    			border-color: #1f1f1f;
-				border-width: 1px;
-    			border-style: solid;
-			}
-			paper-button:hover{
-				background-color: #373737;
 			}
 		</style>
 		
