--- a/www/elements/homecon-page-header/homecon-page-header.html
+++ b/www/elements/homecon-page-header/homecon-page-header.html
@@ -1,8 +1,11 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
+<link rel="import" href="../../styles/homecon-styles.html">
+
 <dom-module is="homecon-page-header">
 	<template>
+		<style include="homecon-styles"></style>
 		<style>
 			:host{
 			}
