--- a/www/elements/homecon-settings/homecon-settings.html
+++ b/www/elements/homecon-settings/homecon-settings.html
@@ -1,12 +1,14 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
-
 <link rel="import" href="../../elements/homecon-page-header/homecon-page-header.html">
 <link rel="import" href="../../elements/homecon-page-section/homecon-page-section.html">
 
+<link rel="import" href="../../styles/homecon-styles.html">
+
 <dom-module is="homecon-settings">
 	<template>
+		<style include="homecon-styles"></style>
 		<style>
 			:host{
 			}	
