--- a/www/elements/homecon-toolbar-item/homecon-toolbar-item.html
+++ b/www/elements/homecon-toolbar-item/homecon-toolbar-item.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 
-<dom-module is="homecon-header-item">
+<dom-module is="homecon-toolbar-item">
 	<template>
 		<style>
 			:host{
@@ -28,7 +28,7 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'homecon-header-item',
+			is: 'homecon-toolbar-item',
 			properties: {
 				pageid: {
 					type: 'String'
