--- a/www/elements/homecon-menu-item/homecon-menu-item.html
+++ b/www/elements/homecon-menu-item/homecon-menu-item.html
@@ -1,5 +1,8 @@
 <link rel="import" href="../../bower_components/polymer/polymer.html">
 <link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
+<link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
+<link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
 
 <link rel="import" href="../../elements/homecon-edit-dialog/homecon-edit-dialog.html">
 <link rel="import" href="../../elements/homecon-icon-select/homecon-icon-select.html">
@@ -57,7 +60,12 @@
 			<h1 class="title">{{page.title}}</h1>
 		</a>
 		
-		<paper-icon-button class="edit" icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
+		<div class="edit">
+			<paper-icon-button icon="icons:arrow-drop-up" noink="true" on-click="moveUp" hidden="{{!edit}}"></paper-icon-button>
+			<paper-icon-button icon="icons:arrow-drop-down" noink="true" on-click="moveDown" hidden="{{!edit}}"></paper-icon-button>
+			<paper-icon-button icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
+		</div>
+		
 		
 		<homecon-edit-dialog id="editDialog" on-save="save">
 			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
@@ -94,6 +102,12 @@
 			},
 			delete: function(){
 				this.fire('delete')
+			},
+			moveUp: function(){
+				this.fire('move-up')
+			},
+			moveDown: function(){
+				this.fire('move-down')
 			}
 		});
 	</script>
