--- a/www/elements/homecon-menu-section/homecon-menu-section.html
+++ b/www/elements/homecon-menu-section/homecon-menu-section.html
@@ -2,7 +2,9 @@
 <link rel="import" href="../../bower_components/iron-flex-layout/classes/iron-flex-layout.html">
 <link rel="import" href="../../bower_components/iron-collapse/iron-collapse.html">
 <link rel="import" href="../../bower_components/iron-icon/iron-icon.html">
+<link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/editor-icons.html">
+
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
 <link rel="import" href="../../bower_components/paper-input/paper-input.html">
 <link rel="import" href="../../bower_components/paper-button/paper-button.html"
@@ -52,7 +54,11 @@
 			{{section.title}}
 		</a>
 
-		<paper-icon-button class="edit" icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
+		<div class="edit">
+			<paper-icon-button icon="icons:arrow-drop-up" noink="true" on-click="moveUp" hidden="{{!edit}}"></paper-icon-button>
+			<paper-icon-button icon="icons:arrow-drop-down" noink="true" on-click="moveDown" hidden="{{!edit}}"></paper-icon-button>
+			<paper-icon-button icon="editor:mode-edit" noink="true" on-click="openEditDialog" hidden="{{!edit}}"></paper-icon-button>
+		</div>
 
 		<iron-collapse opened="{{opened}}">
 			<content></content>
@@ -61,7 +67,7 @@
 
 		<homecon-edit-dialog id="editDialog" on-save="save">
 			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
-			<paper-button on-click="delete">Delete</paper-button>
+			<paper-button on-tap="delete">Delete</paper-button>
 		</homecon-edit-dialog>
 
 
@@ -103,6 +109,12 @@
 			},
 			delete: function(){
 				this.fire('delete')
+			},
+			moveUp: function(){
+				this.fire('move-up')
+			},
+			moveDown: function(){
+				this.fire('move-down')
 			}
 		});
 	</script>
