--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -59,11 +59,15 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 				background-color: var(--toolbar-background-color);
 				color: var(--primary-text-color);
 			}
-			app-header paper-icon-button {
+			app-header paper-icon-button{
 				--paper-icon-button-ink-color: white;
 			}
 			app-drawer{
-			
+				width: 100% !important;
+				--app-drawer-content-container: {
+				  width: 40%;
+				  min-width: 300px;
+				};
 			}
 			app-toolbar{
 				box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.5);
@@ -78,19 +82,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			}
 			.main-content{
 				background-color: var(--primary-background-color);
-			}
-			.drawer-list a {
-				display: block;
-				padding: 0 16px;
-				line-height: 40px;
-				text-decoration: none;
-			}
-			.drawer-list a.iron-selected {
-				color: black;
-				font-weight: bold;
-			}
-			.drawer-list a.subroute {
-				padding-left: 32px;
 			}
 			.hidden{
 				display: none;
@@ -109,7 +100,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 				</app-toolbar>
 			</app-header>
 
-			<app-drawer-layout id="pagesDrawerLayout">
+			<app-drawer-layout id="pagesDrawerLayout" class$="[[drawerWidthClass]]">
 
 				<!-- Drawer -->
 				<app-drawer id="pagesDrawer" class$="[[menuClass]]">
@@ -117,6 +108,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
 						<!-- Pages menu -->
 						<homecon-menu sections="{{homeconSections}}" pages="{{homeconPages}}"></homecon-menu>
+
+						<!-- Other menu items -->
 
 					</div>
 				</app-drawer>
