renamed menu to pages menu

--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -20,7 +20,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../bower_components/iron-pages/iron-pages.html">
 <link rel="import" href="../bower_components/iron-selector/iron-selector.html">
 
-<link rel="import" href="homecon-menu.html">
+<link rel="import" href="homecon-pages-menu.html">
 
 <dom-module id="homecon-app">
 
@@ -107,9 +107,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 					<div class=drawer-content>
 
 						<!-- Pages menu -->
-						<homecon-menu sections="{{homeconSections}}" pages="{{homeconPages}}"></homecon-menu>
+						<homecon-pages-menu sections="{{homeconSections}}" pages="{{homeconPages}}"></homecon-menu>
 
 						<!-- Other menu items -->
+						
+
 
 					</div>
 				</app-drawer>
