--- a/app/src/homecon-pages-menu-item.html
+++ b/app/src/homecon-pages-menu-item.html
@@ -7,7 +7,7 @@
 <link rel="import" href="homecon-icon-select.html">
 
 
-<dom-module is="homecon-menu-item">
+<dom-module is="homecon-pages-menu-item">
 	<template>
 		<style>
 			:host{
@@ -74,7 +74,7 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'homecon-menu-item',
+			is: 'homecon-pages-menu-item',
 			properties: {
 				page: {
 					type: 'Object',
