--- a/app/src/homecon-pages-menu-section.html
+++ b/app/src/homecon-pages-menu-section.html
@@ -11,7 +11,7 @@
 
 <<link rel="import" href="homecon-edit-dialog.html">
 
-<dom-module is="homecon-menu-section">
+<dom-module is="homecon-pages-menu-section">
 	<template>
 		<style>
 			:host{
@@ -71,7 +71,7 @@
 	</template>
 	<script>
 		Polymer({
-			is: 'homecon-menu-section',
+			is: 'homecon-pages-menu-section',
 			properties: {
 				section: {
 					type: 'Object',
