fixed dialog flex layout bugs

--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -63,10 +63,10 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 				--paper-icon-button-ink-color: white;
 			}
 			app-drawer{
-				width: 100% !important;
+				width: 40% !important;
+				min-width: 300px;
 				--app-drawer-content-container: {
-				  width: 40%;
-				  min-width: 300px;
+				  width: 100%;
 				};
 			}
 			app-toolbar{
@@ -109,7 +109,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 						<!-- Pages menu -->
 						<homecon-pages-menu sections="{{homeconSections}}" pages="{{homeconPages}}"></homecon-menu>
 
-						<!-- Other menu items -->
+						<!-- Menu -->
 						
 
 
