--- a/app/src/homecon-pages-menu-item.html
+++ b/app/src/homecon-pages-menu-item.html
@@ -68,7 +68,7 @@
 		<homecon-edit-dialog id="editDialog" on-save="save">
 			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
 			<homecon-icon-select icon="{{newIcon}}"></homecon-icon-select>
-			<paper-button on-click="delete">Delete</paper-button>
+			<paper-button raised on-click="delete">Delete</paper-button>
 		</homecon-edit-dialog>
 
 	</template>
