--- a/app/src/homecon-pages-menu.html
+++ b/app/src/homecon-pages-menu.html
@@ -22,7 +22,7 @@
 				</template>
 
 				<div class="vertical layout center" hidden="{{!edit}}">
-					<paper-button noink="true" on-click="addPage">add page</paper-button>
+					<paper-button raised noink="true" on-click="addPage">add page</paper-button>
 				</div>
 
 			</homecon-pages-menu-section>
@@ -30,7 +30,7 @@
 
 		
 		<div class="vertical layout center" hidden="{{!edit}}">
-			<paper-button noink="true" on-click="addSection">add section</paper-button>
+			<paper-button raised noink="true" on-click="addSection">add section</paper-button>
 		</div>
 		
 		
