--- a/app/src/homecon-pages-menu-section.html
+++ b/app/src/homecon-pages-menu-section.html
@@ -64,7 +64,7 @@
 
 		<homecon-edit-dialog id="editDialog" on-save="save">
 			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
-			<paper-button on-tap="delete">Delete</paper-button>
+			<paper-button raised on-tap="delete">Delete</paper-button>
 		</homecon-edit-dialog>
 
 
