--- a/app/src/homecon-app.html
+++ b/app/src/homecon-app.html
@@ -66,7 +66,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 				width: 40% !important;
 				min-width: 300px;
 				--app-drawer-content-container: {
-				  width: 100%;
+					width: 100%;
 				};
 			}
 			app-toolbar{
@@ -83,6 +83,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			.main-content{
 				background-color: var(--primary-background-color);
 			}
+			img.logo{
+				height: 20px;
+			}
 			.hidden{
 				display: none;
 			}
@@ -96,7 +99,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 			<app-header fixed class$="[[menuClass]]">
 				<app-toolbar>
 					<paper-icon-button icon="menu" on-tap="toggleDrawer" class$="[[menuButtonClass]]"></paper-icon-button>
-					<div title>Homecon</div>
+					<div title >Homecon</div>
 				</app-toolbar>
 			</app-header>
 
