--- a/app/src/homecon-page-section.html
+++ b/app/src/homecon-page-section.html
@@ -74,6 +74,7 @@
 
 		<homecon-edit-dialog id="editDialog" on-save="save">
 			<paper-input label="Title:" value="{{newTitle}}"></paper-input>
+			<paper-button raised on-tap="delete">Delete</paper-button>
 		</homecon-edit-dialog>
 
 	</template>
@@ -109,6 +110,15 @@
 				this.title = this.newTitle;
 				this.$.editDialog.close();
 			},
+			delete: function(){
+				this.fire('delete')
+			},
+			moveUp: function(){
+				this.fire('move-up')
+			},
+			moveDown: function(){
+				this.fire('move-down')
+			}
 		});
 	</script>
 </dom-module>
